feat:nuevas apis para pedir las formas necesarias por usuario y saber que campos le faltan por cumplir
